[package]
name = "slab_allocator"
version = "0.3.1"
authors = ["Robert Węcławski <r.weclawski@gmail.com>", "Yiren Zhang <zyr_ms@outlook.com>"]
license = "MIT"

description = "Slab allocator for `no_std` systems. Uses multiple slabs with blocks of different sizes and a linked list for blocks larger than 4096 bytes"
keywords = ["slab", "allocator", "no_std", "heap", "kernel"]

[dependencies]
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["bitmap"] }
buddy_system_allocator = { version = "0.9", default-features = false }
